# scribe

./: .gitignore  README.md  mise.toml  pyproject.toml
scribe/: __init__.py  __main__.py  capture.py  summarize.py  transcribe.py
tests/: test_capture.py  test_summarize.py  test_transcribe.py  test_transcribe_e2e.py
tests/fixtures/: PROVENANCE.md
