[project]
name = "scribe"
version = "0.1.0"
description = "Local, bot-free meeting note-taker (capture -> transcribe -> summarize). CPU-only, privacy-first."
requires-python = ">=3.9"
dependencies = []

[project.scripts]
scribe = "scribe.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
